<resources>
    <string name="app_name">Group LOC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Group LOC</string>
    <string name="title_activity_registration">Register</string>
    <string name="hint_login">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Password again</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="btn_link_to_login">Already registred! Back to login screen</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="markerName">Name your marker</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="app_id">1438605899775341</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_friends">Friends</string>
    <string name="confirmButton">Confirm</string>
    <string name="filterText">Enter friend name</string>
    <string name="rightDrawerTitle">Friends</string>
    <string name="facebook_login_button_text">Log in with facebook</string>
    <string name="listViewFilterNoResults">No results</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordAgain">New password again</string>
    <string name="emailValid">Email address is invalid</string>
    <string name="emailValidEmpty">Email is empty</string>
    <string name="passwordValidEmpty">Password is empty</string>
    <string name="passwordValidMoreThan">Password should have at least 6 characters</string>
    <string name="passwordValidSame">New passwords are not identical</string>
    <string name="passwordValidOldSameAsNew">Old and new passwords cannot be identical</string>
    <string name="nameValidEmpty">Name is empty</string>
    <string name="nameValidMoreThan">Name should have at least 2 characters</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="registerPasswordsValidSame">Passwords are not identical</string>
    <string name="google_app_id">api-project-631031851579</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searching_friends_text">Enter friend name or email</string>

    <string name="movies_categories_key">categoriesKey</string>
    <string name="default_movies_categories">popular</string>

    <string name="inline_preferences">popular</string>
    <string name="title_checkbox_preference">popular</string>
    <string name="summary_checkbox_preference">popular</string>

</resources>
