<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zpi.squad.app.grouploc.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="GroupLoc"
        android:textSize="20pt"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/appName"
        android:textColor="#ff000000"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:singleLine="true"
        android:layout_below="@id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="#ff000000"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:password="true"
        android:textColor="#ff000000"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="facebook" />

    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_link_to_register"
        android:background="@android:color/transparent"/>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_password"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:text="Remind password"
        android:textColor="#479123" />-->

</RelativeLayout>
